@@ -1,3 +1,8 @@
+2010-12-31  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-methods): Add recursive options to "scpc" and
+	"scpx".
+
 2010-12-10  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-action-password, tramp-process-actions): Revert
